<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SignFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/app_name_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_name_border_background"
            android:paddingHorizontal="15dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caveat_brush"
                android:text="@string/app_name"
                android:textColor="@color/text_color"
                android:textSize="45sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvSingIn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/sign_in_your_account"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name_container" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins"
            android:text="@string/email"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvSingIn"
            app:layout_constraintTop_toBottomOf="@+id/tvSingIn" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:hint="xyz@gmail.com"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:textColorHint="#D6CBCB"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/tvPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins"
            android:text="@string/pass"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvSingIn"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:hint="@string/pass"
            android:inputType="numberPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:textColorHint="#D6CBCB"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvPass" />

        <TextView
            android:id="@+id/tvFrPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/forget_pass"
            app:layout_constraintEnd_toEndOf="@+id/etPass"
            app:layout_constraintTop_toBottomOf="@+id/etPass" />


        <Button
            android:id="@+id/signBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_customise"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/etPass"
            app:layout_constraintTop_toBottomOf="@+id/etPass" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/or_sign_in_with"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/signBtn"
            app:layout_constraintStart_toStartOf="@+id/signBtn"
            app:layout_constraintTop_toBottomOf="@+id/signBtn" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/googleSignContainer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/google_signup_back"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            app:layout_constraintStart_toStartOf="@+id/signBtn"
            app:layout_constraintTop_toBottomOf="@+id/tvOr">

            <ImageView
                android:id="@+id/iconGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/sign_in_with_google"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/iconGoogle"
                app:layout_constraintStart_toStartOf="@+id/iconGoogle"
                app:layout_constraintTop_toTopOf="@+id/iconGoogle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/dont_have_account"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/googleSignContainer"
            app:layout_constraintStart_toStartOf="@+id/googleSignContainer"
            app:layout_constraintTop_toBottomOf="@+id/googleSignContainer" />

        <CheckBox
            android:id="@+id/chShowPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_pass"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@+id/tvFrPass"
            app:layout_constraintStart_toStartOf="@+id/etPass"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="383dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>