<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">


    <ImageView
        android:id="@+id/icBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/icBack"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintTop_toTopOf="@+id/icBack" />

    <TextView
        android:id="@+id/tvSingIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/create_your_account"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins"
        android:text="@string/email"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvSingIn"
        app:layout_constraintTop_toBottomOf="@+id/tvSingIn" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:hint="@string/demoMail"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:textColorHint="#D6CBCB"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"
        android:text="@string/pass"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvSingIn"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:hint="@string/pass"
        android:inputType="numberPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:textColorHint="#D6CBCB"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvPass" />


    <TextView
        android:id="@+id/tvPassConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"
        android:text="@string/confirm_pass"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etPass"
        app:layout_constraintTop_toBottomOf="@+id/etPass" />

    <EditText
        android:id="@+id/etPassConfirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:hint="@string/pass"
        android:inputType="numberPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:textColorHint="#D6CBCB"
        app:layout_constraintStart_toStartOf="@+id/tvPassConfirm"
        app:layout_constraintTop_toBottomOf="@+id/tvPassConfirm" />


    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="Do not match pass word"
        app:layout_constraintStart_toStartOf="@+id/etPassConfirm"
        app:layout_constraintTop_toBottomOf="@+id/etPassConfirm" />


    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_customise"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/warning"
        app:layout_constraintTop_toBottomOf="@+id/warning" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/or_sign_up_with"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
        app:layout_constraintStart_toStartOf="@+id/signUpBtn"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/googleSignContainer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/google_signup_back"
        android:clickable="true"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        app:layout_constraintStart_toStartOf="@+id/signUpBtn"
        app:layout_constraintTop_toBottomOf="@+id/tvOr">

        <ImageView
            android:id="@+id/iconGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/sign_up_with_google"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iconGoogle"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="@+id/iconGoogle"
            app:layout_constraintTop_toTopOf="@+id/iconGoogle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/haveSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/have_account"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/googleSignContainer"
        app:layout_constraintStart_toStartOf="@+id/googleSignContainer"
        app:layout_constraintTop_toBottomOf="@+id/googleSignContainer" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


</androidx.constraintlayout.widget.ConstraintLayout>